{
    "name": "PlayerControl",
    "maps": [
        {
            "name": "PlayerMovement",
            "id": "23912bc0-3986-42cb-b4ab-0942d5a56a30",
            "actions": [
                {
                    "name": "MovementControls",
                    "type": "PassThrough",
                    "id": "47890b63-3bc6-4f39-9a3a-1267616c8810",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "09f23dbc-dc4c-4570-82b7-2e6d238e11ec",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementControls",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "8c0a0c0d-f726-466c-af55-1909d1f5f8b7",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementControls",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "45f7ffc2-a962-4a56-9a1b-a8b97def566f",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementControls",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "c7e3ea80-de61-41ce-9da0-7c18eaecb88a",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementControls",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "6e2e74a7-15c7-44f9-b23a-2cbe7974f24a",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementControls",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "PlayerCamera",
            "id": "d3c575cf-04a1-420d-8810-1a8cb1689d63",
            "actions": [
                {
                    "name": "CameraControls",
                    "type": "PassThrough",
                    "id": "6a893fca-518e-4b3f-b228-2118a5c055ce",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "ea746412-a6fe-4ef6-b2e5-079c1a6411fd",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraControls",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "ccd87b53-49f7-4a70-9ba2-7ec18848a6f7",
                    "path": "<Mouse>/delta/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraControls",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "7b04386e-935b-4b46-8fef-b6318822a986",
                    "path": "<Mouse>/delta/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraControls",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "7d31c2de-9f25-40c8-a5ef-7bce69a84f2e",
                    "path": "<Mouse>/delta/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraControls",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "288221a3-a199-4c28-ada6-c463af20cb9a",
                    "path": "<Mouse>/delta/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraControls",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "PlayerActions",
            "id": "ac5d33cf-339d-4e30-a2b6-03802884425e",
            "actions": [
                {
                    "name": "Dodge",
                    "type": "Button",
                    "id": "f86baf36-e367-4f35-9b48-9a98f7a4211c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Sprint",
                    "type": "PassThrough",
                    "id": "9b17b2ed-1ac0-42dd-a9ba-97703862587c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "5fb128fb-10e4-4533-9729-b60bcc3431b0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Mouse1",
                    "type": "Button",
                    "id": "5c4c52fb-831e-429d-b4fa-01a1242a2082",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Tap(duration=0.09)",
                    "initialStateCheck": false
                },
                {
                    "name": "Que Mouse1",
                    "type": "Button",
                    "id": "a72733ba-d0b1-4ab0-a4f0-51c58e9f4d46",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Tap(duration=0.09)",
                    "initialStateCheck": false
                },
                {
                    "name": "Mouse2",
                    "type": "Button",
                    "id": "8c7f9407-f460-4aad-a5a7-5c76f9e058b3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Hold Mouse1",
                    "type": "Button",
                    "id": "39bc9cfd-a1b0-44b7-aff9-b24e8b657349",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Hold(pressPoint=0.1)",
                    "initialStateCheck": false
                },
                {
                    "name": "LockOn",
                    "type": "Button",
                    "id": "ae920bff-003e-4f89-bde7-486f50b6b7a0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Seek Left Lock On Target",
                    "type": "Button",
                    "id": "c6048c96-f7e9-4aae-bd5d-fe1fd6409bae",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Seek Right Lock On Target",
                    "type": "Button",
                    "id": "0ec9e21c-0566-486d-8e63-680064feb099",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Switch Right Weapon",
                    "type": "PassThrough",
                    "id": "c58fe17c-d39e-4363-ba5d-80293f358971",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "656a4807-e4f3-44c6-b708-7692acceb6b0",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dodge",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "33fc1cee-222d-4d91-bd18-453d93a361c3",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "db550e03-e6eb-4f51-8353-65d317c42264",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6d7cf8ec-96f2-4273-b9ab-b12db93b4d52",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouse1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "41b2ae04-9f57-4c3d-b481-525246b6875c",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Que Mouse1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8dfa04a6-56a1-4405-a72f-b3cd5b7afd92",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouse2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e71b6cf3-63a5-42e0-b045-7e5fa8e6d6a3",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hold Mouse1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "20ca9b87-d960-40c9-b89d-4a3193bf3f8e",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LockOn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4c3cfdf8-9f96-49ee-8f78-19d92593d3cc",
                    "path": "<Mouse>/backButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Seek Left Lock On Target",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d4fa21f6-7867-458e-bbf6-d43f4446f327",
                    "path": "<Mouse>/forwardButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Seek Right Lock On Target",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c4ec92e8-e105-4950-a792-0519e625aee4",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Switch Right Weapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}